# GrowtopiaServer-Rust

./: .env.example  Cargo.toml  README.md  cert.pem  extractor.rs  key.pem
crates/rusty_enet/: Cargo.toml
crates/rusty_enet/src/: lib.rs  socket.rs
crates/rusty_enet/src/c/: protocol.rs
growtopia_cache/cache/game/: cool_sword.rttex  particles12.rttex  pickaxe.rttex  player_cosmetics4.rttex  player_cosmetics4_icon.rttex
growtopia_cache/cache/interface/large/gazette/: gazette_3columns_feature_btn05.rttex
growtopia_cache/cache/interface/large/store_buttons/: store_buttons43.rttex
src/: main.rs
src/database/: db_thread.rs  item_config.rs  items_decoder.rs  mod.rs  player.rs  world.rs
src/game/: gt_mmo.rs  gui.rs  item_effects.rs  mod.rs  npc.rs  roles.rs
src/network/: commands.rs  discord.rs  host.rs  login.rs  mod.rs  packet.rs  peer.rs  server.rs  server_data.rs
