[package]
name = "GrowServer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
dotenvy = "0.15.7"
axum = "0.8.8"

anyhow = "1.0.100"
once_cell = "1.21.3"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
tracing-appender = "0.2"
openssl = "0.10.75"
rustls = { version = "0.23.36", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rusty_enet = { path = "crates/rusty_enet" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2.1"
tower-http = { version = "0.6", features = ["compression-full", "cors", "fs"] }
serde_urlencoded = "0.7"
zstd = "0.13"


[profile.dev]
debug = false